tests/baselines/reference/scannerES3NumericLiteral2.errors.txt
tests/cases/conformance/scanner/ecmascript3/scannerES3NumericLiteral2.ts(1,1): error TS1121: Octal literals are not allowed. Use the syntax '0o1'.


==== tests/cases/conformance/scanner/ecmascript3/scannerES3NumericLiteral2.ts (1 errors) ====
    01
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o1'.